Fabric8/maven-s2i/appbuilder/appbuilder-dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 1
  labels:
    app: appbuilder
  name: appbuilder
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: appbuilder
    deploymentconfig: appbuilder
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: appbuilder
        deploymentconfig: appbuilder
    spec:
      containers:
      - env:
        - name: DOMAIN
          value: http://sample-service-a-project.192.168.42.8.nip.io/sample
        - name: USE_MOCKS
          value: "false"
        image: ampie/appbuilder:5.0.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: appbuilder
        ports:
        - containerPort: 5000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
