Fabric8/maven-s2i/appbuilder/appbuilder-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: appbuilder
  name: appbuilder
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: appbuilder
    deploymentconfig: appbuilder
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
